# kunnskapsassistenten

./: Akseptansekriterier.md  README.md  Simons prototype.md  retningslinjer for bruk av Kunnskapsassistenten.md
evals/agents/: pyproject.toml
evals/agents/src/agents/: MockAgent.py  RagAgent.py  __init__.py  agent.py
evals/eval_from_golden_questions/: .env.azure.example  CLAUDE.md  EVAL_PROVIDERS.md  README.md  print_results.py  pyproject.toml  select_representative_questions.py
evals/eval_from_golden_questions/dashboard/: __init__.py  app.py  data_loader.py  metrics_calc.py
evals/eval_from_golden_questions/dashboard/components/: detail_view.py  filters.py  global_view.py  usage_mode_view.py
evals/eval_from_golden_questions/exploration/azureopenai/: test.py  test_azm.py
evals/eval_from_golden_questions/exploration/evals_pytest_version/: CLI_ARGS.md  README.md  conftest.py  run_example.sh  test_rag_eval.py
evals/eval_from_golden_questions/specs/: dashboard_spec.md  rag_eval_spec.md
evals/eval_from_golden_questions/src/: CustomOllamaModel.py  __init__.py  config.py  evaluate_wrapper.py  evaluator.py  main.py  metrics.py  model_resolver.py  models.py  rag_querier.py  reporter.py
evals/eval_from_golden_questions/tests/: test_config.py  test_data_loader.py  test_integration.py  test_metrics_calc.py  test_model_resolver.py  test_models.py  test_rag_querier.py  test_reporter.py
evals/golden_questions/: .env.example  .gitignore  CLAUDE.md  README.md  TRANSPARENCY.md  VALIDATION_REPORT.md  pyproject.toml
evals/golden_questions/.claude/commands/: runfx.md
evals/golden_questions/specs/: golden_questions_spec.md
evals/golden_questions/src/: __init__.py  categorizer_llm.py  deduplicator.py  extractor.py  filter.py  llm_cache.py  llm_provider.py  loader.py  main.py  models.py  reformulator_llm.py  subject_categorizer_llm.py
evals/golden_questions/tests/: __init__.py  conftest.py  test_categorizer_llm.py  test_deduplicator.py  test_extractor.py  test_filter.py  test_integration.py  test_llm_cache.py  test_llm_provider.py  test_loader.py  test_reformulator_llm.py  test_subject_categorizer_llm.py
evals/golden_questions/tests/cassettes/: test_deduplicate_exact_match.yaml  test_deduplicate_no_duplicates.yaml  test_deduplicate_norwegian_characters.yaml  test_deduplicate_semantic_preserves_exact_match_fast_path.yaml  test_deduplicate_semantic_similarity_removes_similar_questions.yaml  test_deduplicate_semantic_threshold_affects_results.yaml  (+4 more)
(+69 files in other folders)
