[project]
name = "golden-questions"
version = "0.1.0"
description = "Extract high-quality evaluation questions from production conversations"
requires-python = ">=3.10"
dependencies = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "tqdm>=4.66.0",
    "openai>=1.0.0",
    "langfuse>=3.10.5",
    "numpy>=1.24.0",
    "pytest-recording>=0.13.4",
    "diskcache>=5.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=src --cov-report=term-missing --cov-report=html"

[tool.ruff]
line-length = 100
target-version = "py310"
